Test building native-image