@@ -11,22 +11,25 @@
 
     <artifactId>dev.thihup.jvisualg.ide</artifactId>
 
+    <name>JVisualG</name>
+
     <properties>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <mainClass>dev.thihup.jvisualg.ide.Main</mainClass>
+        <native.maven.plugin.version>0.9.12</native.maven.plugin.version>
+        <imageName>JVisualG</imageName>
+        <javafx.version>22</javafx.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>22</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>22</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.fxmisc.richtext</groupId>
@@ -34,5 +37,55 @@
             <version>0.11.2</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>${mainClass}</mainClass>
+                    <options>
+                        <option>-DautoClose=true</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.base/com.sun.javafx.collections=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.base/com.sun.javafx=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
+                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED</option>
+                    </options>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.gluonhq</groupId>
+                        <artifactId>gluonfx-maven-plugin</artifactId>
+                        <version>1.0.22</version>
+                        <configuration>
+                            <mainClass>${mainClass}</mainClass>
+                            <enableSWRendering>true</enableSWRendering>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
